# platform-SDET

./: .env  .gitignore  Dockerfile  Dockerfile.test  README.md  config.py  conftest.py  docker-compose.yml  main.py  pyproject.toml
sdk/: base.py  logger.py  on_failure_printer.py
sdk/endpoints/: orders_endpoints.py
tests/api_tests/orders/: test_create_order.py  test_delete_order.py  test_get_order.py
tests/performance_tests/: test_simple_performance.py
tests/unit_tests/: test_simple_unit_api_healthcheck.py  test_simple_unit_websocket_healthcheck.py
